--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     font-size: 14px;
   }
   .container { max-width: 860px; margin: 24px auto; padding: 0 16px; display: flex; flex-direction: column; gap: 16px; }
-  .card { background: var(--panel); border-radius: 12px; box-shadow: var(--shadow); overflow: hidden; }
+  .card { background: var(--panel); border-radius: 12px; box-shadow: var(--shadow); overflow: visible; }
   .card-body { padding: 20px 24px; }
   .loading-overlay { text-align: center; padding: 40px 24px; color: var(--text-muted); font-size: 14px; }
   .load-error {
@@ -139,21 +139,28 @@
   .data-status { font-size: 11px; color: var(--text-muted); margin-left: auto; font-style: italic; }
 
   /* ZIP picker dropdown */
-  .zip-picker {
-    margin-top: 6px;
-    border: 1.5px solid var(--border);
-    border-radius: 10px;
-    background: white;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.12);
-    overflow: hidden;
-    max-height: 240px;
-    overflow-y: auto;
-    position: absolute;
-    top: calc(100% + 28px);
-    left: 0;
-    right: 0;
-    z-index: 9999;
-  }
+.zip-picker {
+  margin-top: 8px;
+  border: 1.5px solid var(--border);
+  border-radius: 12px;
+  background: white;
+  box-shadow: 0 16px 40px rgba(0,0,0,0.16);
+  overflow: auto;
+
+  /* Bigger list */
+  max-height: 320px;
+  min-height: 140px;
+
+  /* Make it fill the width of the ZIP field */
+  position: absolute;
+  left: 0;
+  right: 0;
+
+  /* Put it directly under the ZIP input */
+  top: calc(100% + 6px);
+
+  z-index: 99999;
+}
   .zip-item {
     padding: 10px 12px;
     cursor: pointer;
